feature: mudanca de arquitetura para clean e adicao do front end